# campaign-reader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
examples/: extraction.py
src/campaign_reader/: __init__.py  models.py  reader.py  video.py
src/campaign_reader/analytics/: __init__.py  aggregation.py  core.py
tests/: conftest.py  test_analytics.py  test_analytics_aggregation.py  test_campaign_reader.py  test_pandas_support.py  test_reader.py  test_video.py
